[package]
name = "zcash-devtool"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
bip0039 = { version = "0.12", features = ["std", "all-languages"] }
bip32 = { version = "=0.6.0-pre.1", default-features = false, features = ["secp256k1-ffi"] }
futures-util = "0.3"
hex = "0.4"
jubjub = "0.10"
nonempty = { version = "0.11", default-features = false }
prost = "0.14"
rayon = "1.7"
ripemd = "0.1"
rusqlite = { version = "0.37", features = ["time"] }
schemerz = "0.2"
secp256k1 = { version = "0.29", features = ["serde"] }
secrecy = "0.8"
serde = "1.0"
time = "0.3"
tokio = { version = "1.21.0", features = ["fs", "io-std", "macros", "rt-multi-thread", "signal"] }
tokio-socks = "0.5"
toml = "0.8"
tonic = { version = "0.14", features = ["gzip", "tls-webpki-roots"] }
tower = { version = "0.5", features = ["util"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = "1"

# Zcash
orchard = { version = "0.14", default-features = false }
pczt = "0.7"
sapling = { package = "sapling-crypto", version = "0.7" }
transparent = { package = "zcash_transparent", version = "0.8", features = ["test-dependencies"] }
zcash_address = "0.12"
zcash_client_backend = { version = "0.23", features = ["lightwalletd-tonic-tls-webpki-roots", "orchard", "pczt", "tor", "unstable"] }
zcash_client_sqlite = { version = "0.21", features = ["unstable", "orchard", "serde", "test-dependencies"] }
zcash_keys = { version = "0.14", features = ["orchard", "unstable", "unstable-frost"] }
zcash_primitives = "0.28"
zcash_proofs = { version = "0.28", features = ["bundled-prover"] }
zcash_protocol = { version = "0.9", features = ["local-consensus"] }
zcash_script = "0.4"
zip32 = "0.2"
zip321 = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "string", "unstable-styles"] }

# CSPRNG
rand = { version = "0.8", default-features = false }

# Seed encryption
age = { version = "0.11", features = ["armor", "plugin"] }
chrono = "0.4"
rpassword = "7"

# Currency conversion
iso_currency = { version = "0.5", features = ["with-serde"] }
rust_decimal = "1"

# Inspect
bech32 = "0.11"
bellman = "0.14"
blake2b_simd = "1"
bs58 = "0.5"
ed25519-zebra = "4"
equihash = "0.2"
group = "0.13"
lazy_static = "1"
serde_json = "1"
sha2 = "0.10"
uint = "0.9"
zcash_encoding = "0.4"
zcash_note_encryption = "0.4.1"

# PCZT QR codes
image = { version = "0.25", optional = true }
minicbor = { version = "0.19", optional = true }
nokhwa = { version = "0.10", optional = true, features = ["input-native"] }
qrcode = { version = "0.14", optional = true, default-features = false }
rqrr = { version = "0.9", optional = true }
ur = { version = "0.4", optional = true }

# Tree exploration
incrementalmerkletree = "0.8"
shardtree = "0.6"

# TUI
crossterm = { version = "0.28", optional = true, features = ["event-stream"] }
ratatui = { version = "0.29", optional = true }
roaring = { version = "0.11", optional = true }
tokio-util = { version = "0.7", optional = true }
tui-logger = { version = "0.17", optional = true, features = ["tracing-support"] }

[lints.rust]
# The Ironwood code paths are gated behind `cfg(zcash_unstable = "nu6.3")`, which
# is set for all builds via `.cargo/config.toml`. Register it so `#[cfg(...)]`
# uses in this crate don't trip the `unexpected_cfgs` lint.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(zcash_unstable, values("nu6.3"))'] }

[features]
default = ["transparent-inputs"]
qr = ["dep:qrcode"]
pczt-qr = ["dep:image", "dep:minicbor", "dep:nokhwa", "dep:qrcode", "dep:rqrr", "dep:ur"]
transparent-inputs = [
    "zcash_client_sqlite/transparent-inputs",
]
tui = [
    "dep:crossterm",
    "dep:ratatui",
    "dep:roaring",
    "dep:tokio-util",
    "dep:tui-logger",
]

# Ironwood (NU7 / Zcash Ironwood upgrade) dependency repointing.
#
# The published librustzcash crates cannot create or parse V6/Ironwood
# transactions, so we redirect every librustzcash crate this tool depends on
# (directly or transitively) to the Valar Group `ironwood-integration` fork.
# Because the fork keeps the same crate versions as crates.io, these are
# semver-compatible source replacements and override transitive uses too.
#
# `orchard` must be patched to the exact git revision the fork itself uses
# (pulled by the fork via git, not crates.io); patching it here unifies our
# direct `orchard` dependency with the fork's so there is a single `orchard`
# in the graph.
#
# NOTE: building against this patch requires the Ironwood feature gate; see
# `.cargo/config.toml`, which sets `--cfg zcash_unstable="nu6.3"`.
[patch.crates-io]
orchard = { git = "https://github.com/zcash/orchard", rev = "0eaea4ebb5aa4ba2b6cf4afa0e1c9b5e8c03273a" }
zcash_address = { git = "https://github.com/valargroup/librustzcash", rev = "5df7f06486c7c1cab317a069809b7147857e37ee" }
zcash_encoding = { git = "https://github.com/valargroup/librustzcash", rev = "5df7f06486c7c1cab317a069809b7147857e37ee" }
zcash_protocol = { git = "https://github.com/valargroup/librustzcash", rev = "5df7f06486c7c1cab317a069809b7147857e37ee" }
zip321 = { git = "https://github.com/valargroup/librustzcash", rev = "5df7f06486c7c1cab317a069809b7147857e37ee" }
pczt = { git = "https://github.com/valargroup/librustzcash", rev = "5df7f06486c7c1cab317a069809b7147857e37ee" }
zcash_keys = { git = "https://github.com/valargroup/librustzcash", rev = "5df7f06486c7c1cab317a069809b7147857e37ee" }
zcash_client_backend = { git = "https://github.com/valargroup/librustzcash", rev = "5df7f06486c7c1cab317a069809b7147857e37ee" }
zcash_client_sqlite = { git = "https://github.com/valargroup/librustzcash", rev = "5df7f06486c7c1cab317a069809b7147857e37ee" }
zcash_primitives = { git = "https://github.com/valargroup/librustzcash", rev = "5df7f06486c7c1cab317a069809b7147857e37ee" }
zcash_proofs = { git = "https://github.com/valargroup/librustzcash", rev = "5df7f06486c7c1cab317a069809b7147857e37ee" }
zcash_transparent = { git = "https://github.com/valargroup/librustzcash", rev = "5df7f06486c7c1cab317a069809b7147857e37ee" }
